@@ -59,6 +59,8 @@ cli_option cli_options[] = {
     "Use STARTTLS command", 0 },
   { 0, "x509certfile", cli_option::string, 0, &tls_x509certfile,
     "Client certificate file", 0 },
+  { 0, "x509keyfile", cli_option::string, 0, &tls_x509keyfile,
+    "Client certificate private key file", "the same file as --x509certfile" },
   { 0, "x509cafile", cli_option::string, 0, &tls_x509cafile,
     "Certificate authority trust file", DEFAULT_CA_FILE },
   { 0, "x509crlfile", cli_option::string, 0, &tls_x509crlfile,
