@@ -31,6 +31,7 @@
 
 int tls_insecure = false;
 const char* tls_x509certfile = NULL;
+const char* tls_x509keyfile = NULL;
 const char* tls_x509cafile = NULL;
 const char* tls_x509crlfile = NULL;
 int tls_x509derfmt = false;
@@ -97,8 +98,10 @@ void tls_init(const char* remote)
   gnutls_certificate_set_verify_flags(creds, 0);
 
   gnutls_x509_crt_fmt_t x509fmt = tls_x509derfmt ? GNUTLS_X509_FMT_DER : GNUTLS_X509_FMT_PEM;
+  if (tls_x509keyfile == NULL)
+    tls_x509keyfile = tls_x509certfile;
   if (tls_x509certfile != NULL)
-    gnutls_wrap(gnutls_certificate_set_x509_key_file(creds, tls_x509certfile, tls_x509certfile, x509fmt),
+    gnutls_wrap(gnutls_certificate_set_x509_key_file(creds, tls_x509certfile, tls_x509keyfile, x509fmt),
 		"Error setting SSL/TLS X.509 client certificate");
   if (tls_x509cafile == NULL && access(DEFAULT_CA_FILE, R_OK) == 0)
     tls_x509cafile = DEFAULT_CA_FILE;
